# HLLCRCON_QQBOT

./: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  INSTALL.md  NEW_FEATURES.md  README.md  bot.py  config.yaml  get_team_view.json  hllrcon_v2.MD  maplist.py  permission_groups_test.yaml  pyproject.toml  requirements.txt  servers_config.yaml  test_bot.py  test_permission_system.py  test_permission_system_simple.py
config/: permission_groups.yaml
data/: permissions.json
src/: config.py  crcon_api.py  multi_server_manager.py  permission_groups.py  permissions.py
src/plugins/: __init__.py  admin_commands.py  enhanced_player_list.py  permission_management.py  player_commands.py  server_management.py  system_commands.py
src/utils/: config_loader.py
